results/SpecGenBench/2-shot/log-TwoSum-2023_11_28_03_28_05.txt
class TwoSum {
    //@ requires nums != null;
    //@ requires (\exists int i; 0 <= i && i < nums.length; nums[i] == target);
    //@ ensures (\exists int i, j; 0 <= i && i < \result.length && 0 <= j && j < \result.length && i != j; nums[\result[i]] + nums[\result[j]] == target);
    //@ ensures \result.length == 2;
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        //@ maintaining (\forall int i, j; 0 <= i && i < n && 0 <= j && j < n && i != j; nums[i] + nums[j] != target);
        //@ decreases n - i;
        for (int i = 0; i < n; ++i) {
            //@ maintaining (\forall int j; i + 1 <= j && j < n; nums[i] + nums[j] != target);
            //@ decreases n - j;
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
            }
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:8: error: variable i is already defined in method twoSum(int[],int)
        //@ maintaining (\forall int i, j; 0 <= i && i < n && 0 <= j && j < n && i != j; nums[i] + nums[j] != target);
                                     ^
/home/max/Documents/JMLGPT/tmp/TwoSum.java:11: error: variable j is already defined in method twoSum(int[],int)
            //@ maintaining (\forall int j; i + 1 <= j && j < n; nums[i] + nums[j] != target);
                                         ^
2 errors

